# petals_llm_chain_scheduling

./: .gitignore  LICENSE  README.md  cli.py  data_models.py  pyproject.toml
algorithms/: gca.py  param_optimizer.py  theorem4.py
benchmarks/: jffc_only.py  petals_baseline.py
experiment/: metrics.py  runner.py  trace_replay.py
infra/: network_emulator.py  ripe_atlas_rtts.py
orchestrator/: chain_registry.py  orchestrator.py
petals_llm_chain_scheduling/: __init__.py
petals_llm_chain_scheduling/algorithms/: gbp_cr.py  jffc.py
petals_llm_chain_scheduling/benchmarks/: bprr.py
petals_llm_chain_scheduling/infra/: mig_setup.py
petals_llm_chain_scheduling/orchestrator/: api.py  dispatcher.py
server/: assigned_server.py  profiler.py
tests/: conftest.py
tests/property/: strategies.py
