[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petals-llm-chain-scheduling"
version = "0.1.0"
description = "Server chain composition and load balancing for distributed LLM serving via PETALS"
requires-python = ">=3.8"
dependencies = [
    "petals",
    "numpy",
    "Dijkstar>=2.6.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.80",
]

[project.scripts]
chain-launch-server = "petals_llm_chain_scheduling.cli:launch_server"
chain-launch-orchestrator = "petals_llm_chain_scheduling.cli:launch_orchestrator"
chain-run-experiment = "petals_llm_chain_scheduling.cli:run_experiment"
chain-mig-setup = "petals_llm_chain_scheduling.cli:mig_setup"
chain-mig-teardown = "petals_llm_chain_scheduling.cli:mig_teardown"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["petals_llm_chain_scheduling*"]
